section finaly id added

--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
           <div class="ptions-app-item-desc">
             <h3>سریع</h3>
             <p>
-              برای استفاده از هر کدام از خدمات سوپر‌اپ اسنپ کافی است وارد
-              اپلیکیشن اسنپ شوید و روی آیکون مورد نظر بزنید.
+              قرار گرفتن خدمات مختلف در یک پلت‌فرم به صرفه‌جویی در زمان کمک
+              می‌کند. سوپراپ اسنپ پاسخی سریع به نیازهای رومزه‌ی شماست.
             </p>
           </div>
         </div>
@@ -373,8 +373,77 @@
           <div class="ptions-app-item-desc">
             <h3>به صرفه</h3>
             <p>
-              برای استفاده از هر کدام از خدمات سوپر‌اپ اسنپ کافی است وارد
-              اپلیکیشن اسنپ شوید و روی آیکون مورد نظر بزنید.
+              سوپراپ اسنپ علاوه بر زمان در هزینه‌های شما نیز صرفه‌جویی می‌کند تا
+              بهترین خدمات را با قیمتی منطقی دریافت کنید.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="final-section">
+      <div class="final-section">
+        <h2>در کمتر از ۱۰ دقیقه ثبت‌نام کنید و به ناوگان اسنپ بپیوندید.</h2>
+        <p>
+          بدون نیاز به مراجعه‌ی حضوری، از طریق این صفحه، تمام مراحل ثبت‌نام را
+          اینترنتی انجام دهید
+        </p>
+        <button>ثبت‌نام رانندگان</button>
+        <video
+          width="85%"
+          controls
+          src="https://web-cdn.snapp.ir/snapp-website/videos/homepage/jazb-ranande.mp4"></video>
+      </div>
+      <div class="final-section-items">
+        <div class="final-section-item">
+          <div class="final-section-item-img">
+            <img src="/assets/img/180x100-income.png" alt="" />
+          </div>
+          <div class="final-section-item-desc">
+            <h2>درآمد تضمینی + پاداش‌های ماهانه و هفتگی</h2>
+            <p>
+              با فعالیت در ناوگان اسنپ، علاوه بر کسب درآمد مستمر و امکان تسویه
+              در لحظه می‌توانید با شرکت در طرح‌های تشویقی مختلف، درآمد خود را
+              افزایش دهید.
+            </p>
+          </div>
+        </div>
+        <div class="final-section-item">
+          <div class="final-section-item-img">
+            <img src="/assets/img/180x100-income.png" alt="" />
+          </div>
+          <div class="final-section-item-desc">
+            <h2>درآمد تضمینی + پاداش‌های ماهانه و هفتگی</h2>
+            <p>
+              با فعالیت در ناوگان اسنپ، علاوه بر کسب درآمد مستمر و امکان تسویه
+              در لحظه می‌توانید با شرکت در طرح‌های تشویقی مختلف، درآمد خود را
+              افزایش دهید.
+            </p>
+          </div>
+        </div>
+        <div class="final-section-item">
+          <div class="final-section-item-img">
+            <img src="/assets/img/180x100-income.png" alt="" />
+          </div>
+          <div class="final-section-item-desc">
+            <h2>درآمد تضمینی + پاداش‌های ماهانه و هفتگی</h2>
+            <p>
+              با فعالیت در ناوگان اسنپ، علاوه بر کسب درآمد مستمر و امکان تسویه
+              در لحظه می‌توانید با شرکت در طرح‌های تشویقی مختلف، درآمد خود را
+              افزایش دهید.
+            </p>
+          </div>
+        </div>
+        <div class="final-section-item">
+          <div class="final-section-item-img">
+            <img src="/assets/img/180x100-income.png" alt="" />
+          </div>
+          <div class="final-section-item-desc">
+            <h2>درآمد تضمینی + پاداش‌های ماهانه و هفتگی</h2>
+            <p>
+              با فعالیت در ناوگان اسنپ، علاوه بر کسب درآمد مستمر و امکان تسویه
+              در لحظه می‌توانید با شرکت در طرح‌های تشویقی مختلف، درآمد خود را
+              افزایش دهید.
             </p>
           </div>
         </div>
