footer is added

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         </div>
         <div class="final-section-item">
           <div class="final-section-item-img">
-            <img src="/assets/img/180x100-income.png" alt="" />
+            <img src="/assets/img/180x100-hour.png" alt="" />
           </div>
           <div class="final-section-item-desc">
             <h2>درآمد تضمینی + پاداش‌های ماهانه و هفتگی</h2>
@@ -423,7 +423,7 @@
         </div>
         <div class="final-section-item">
           <div class="final-section-item-img">
-            <img src="/assets/img/180x100-income.png" alt="" />
+            <img src="/assets/img/180x100-benefits.png" alt="" />
           </div>
           <div class="final-section-item-desc">
             <h2>درآمد تضمینی + پاداش‌های ماهانه و هفتگی</h2>
@@ -436,7 +436,7 @@
         </div>
         <div class="final-section-item">
           <div class="final-section-item-img">
-            <img src="/assets/img/180x100-income.png" alt="" />
+            <img src="/assets/img/180x100-carfix.png" alt="" />
           </div>
           <div class="final-section-item-desc">
             <h2>درآمد تضمینی + پاداش‌های ماهانه و هفتگی</h2>
@@ -449,6 +449,27 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="navbar">
+        <ul>
+          <li><a href="">فرصت های شغلی</a></li>
+          <li><a href="">بلاگ</a></li>
+          <li><a href="">باشگاه رانندگان</a></li>
+          <li><a href="">ثبت نام راننده اسنپ</a></li>
+          <li><a href="">پنل سازمانی</a></li>
+          <li><a href="">درباره ما</a></li>
+          <li><a href="">تماس با ما</a></li>
+        </ul>
+      </div>
+      <div class="social-media">
+        <a href=""><img src="assets/img/Instagram-1.png" alt="" /></a>
+        <a href=""><img src="assets/img/svgexport-12.png" alt="" /></a>
+        <a href=""><img src="assets/img/svgexport-13.png" alt="" /></a>
+        <a href=""><img src="assets/img/svgexport-14.png" alt="" /></a>
+        <a href=""><img src="assets/img/svgexport-15.png" alt="" /></a>
+      </div>
+    </footer>
 
     <script src="assets/js/main.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
